--- a/spike-batch/pom.xml
+++ b/spike-batch/pom.xml
@@ -36,6 +36,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.vm.batch</groupId>
+      <artifactId>batch-utils</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
